# boom-boom

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
.ai/: AGENTS.md  dqn_implementation_plan.md  final_maskable_ppo_codex_plan.md  hidden_risk_rl_variant_plan.md  plan.md  prob_minesweeper_codex_plan.md  steps.md
.codex/: AGENTS.md  general.md
agents/: __init__.py  greedy.py
experiments/: common.py  compare_rl_agents.py  evaluate_dqn.py  evaluate_maskable_ppo.py  train_dqn.py  train_maskable_ppo.py
prob_minesweeper/: __init__.py  board.py  cli.py  distributions.py  env.py  evaluation.py  rendering.py  rewards.py  wrappers.py
prob_minesweeper/agents/: __init__.py  base.py  dqn_agent.py  maskable_ppo_agent.py  min_risk_agent.py  random_agent.py
rainbow/: __init__.py  agent.py  env_adapter.py  main.py  memory.py  model.py  test.py
report/: defense_notes.md  report.md
results/correlated-9x9-state+prob/: metrics.pth
results/default/: metrics.pth
scripts/: train.sh
tests/: test_agents.py  test_app_imports.py  test_board.py  test_cli.py  test_distributions.py  test_dqn_agent.py  test_env.py  test_evaluation.py  test_experiment_config.py  test_experiment_distribution_kwargs.py  test_maskable_ppo_agent.py  test_rainbow.py  test_rainbow_memory.py  test_rendering.py  test_rewards.py  test_wrappers.py
