[project]
name = "prob-minesweeper"
version = "0.1.0"
description = "Probabilistic Minesweeper environment for reinforcement learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "scipy>=1.11",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
rl = [
    "torch",
    "matplotlib",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "tqdm",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
prob-minesweeper = "prob_minesweeper.cli:main"
greedy-benchmark = "agents.greedy:main"

[project.entry-points."gymnasium.envs"]
ProbMinesweeper-v0 = "prob_minesweeper.env:ProbMinesweeperEnv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prob_minesweeper", "rainbow", "agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
